# agentforge

./: .gitignore  CHANGELOG.md  Makefile  README.md  agentforge.example.yml  docker-compose.yml  install.sh  pyproject.toml
agentforge/: __init__.py  bootstrap.py  cli.py  config.py  installer.py  platform.py  runner.py
agentforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
agentforge/adapters/: __init__.py  base.py  langchain.py  openclaw.py  standalone.py
agentforge/components/: __init__.py  dashboard.py  healthkit.py  memory.py  pipeline.py
docs/: install.md  ubuntu-install-issues.md  unlock-pipeline.md
healthkit_npm/: README.md  cluster.example.yaml  package-lock.json  package.json  tsconfig.esm.json
healthkit_npm/src/: cluster-manager.ts  health-kit.ts  index.ts  types.ts
tests/: __init__.py  test_adapters.py  test_bootstrap.py  test_cli.py  test_installer.py  test_platform.py
